package, publish, execução, utf8*
preciso tirar tamanho da string da instrução, colocar no compilador